# msc_project_cgps

SNR_evolution/: snr.ipynb
Strömgen/: Q0_plot.ipynb  class_I.csv  class_III.csv  class_V.csv  output_20221230_113908.aladin
figs/sampling_example/: unsmoothed_signal.png~
gaußtest/: .gitignore  analyse.ipynb  make_gauß.py
gaußtest/process/: Cargo.toml
gaußtest/process/src/: main.rs
hi-cavity/: hi.ipynb
pne/: pne.ipynb  tab.csv
python notebooks/: cox_mcceeplot.ipynb  dist_from_arm.ipynb  dist_from_arm_2.ipynb  gaussian_random_field.ipynb  make_cgps_plot.ipynb  post_processor.ipynb  power_law_rot_curve.ipynb  power_law_rot_curve_2.ipynb  pre_processor.ipynb  pre_processor.py  sampling.ipynb  spiral_arms.ipynb
python notebooks/garbage/: 2d_filter.ipynb  3d_pre_processor.ipynb  angle_plot.ipynb  ndfft.ipynb  test_stats.ipynb
rust_data_processing/: Cargo.toml
rust_data_processing/src/: main.rs  util.rs
rust_mock_cube/: Cargo.toml
rust_mock_cube/src/: main.rs  util.rs
