[package]
name = "rust_mock_cube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Array stuff
ndarray = {version="0.15", features=["rayon"]}
ndarray-rand = "0.14"
image = "0.24"

#Rustronomy
rustronomy-fits = "0.2"
rustronomy-watershed = { version = "0.3.1", features = ["plots"]}

#Random numbers
rand = "0.8"
rand_distr = "0.4"

#IO and plotting
csv = "1"

#Concurrency
rayon = "1"